// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrintBoardDialog tests default renderer 1`] = `
<ForwardRef(WithStyles)
  disableSubmit={true}
  onClose={[Function]}
  open={false}
  title="PrintBoardDialog Title"
>
  <ForwardRef(WithStyles)>
    <FullScreenDialogContent
      className="PrintBoardDialog__container"
    >
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)
            primary={
              <FormattedMessage
                defaultMessage="Print Board"
                id="cboard.components.PrintBoardButton.printBoard"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Print current board or full board set (it can take a while)."
                id="cboard.components.PrintBoardButton.printBoardSecondary"
                values={Object {}}
              />
            }
          />
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              color="primary"
              disabled={false}
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Current Board"
                id="cboard.components.PrintBoardButton.printCurrentBoard"
                values={Object {}}
              />
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    </FullScreenDialogContent>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;

exports[`PrintBoardDialog tests loading renderer 1`] = `
<ForwardRef(WithStyles)
  disableSubmit={true}
  onClose={[Function]}
  open={true}
  title="PrintBoardDialog Title"
>
  <ForwardRef(WithStyles)>
    <FullScreenDialogContent
      className="PrintBoardDialog__container"
    >
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)
            primary={
              <FormattedMessage
                defaultMessage="Print Board"
                id="cboard.components.PrintBoardButton.printBoard"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Print current board or full board set (it can take a while)."
                id="cboard.components.PrintBoardButton.printBoardSecondary"
                values={Object {}}
              />
            }
          />
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              className="PrintBoardDialog--spinner"
              size={25}
              thickness={7}
            />
            <ForwardRef(WithStyles)
              color="primary"
              disabled={true}
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Current Board"
                id="cboard.components.PrintBoardButton.printCurrentBoard"
                values={Object {}}
              />
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    </FullScreenDialogContent>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;

exports[`PrintBoardDialog tests open dialog 1`] = `
<ForwardRef(WithStyles)
  disableSubmit={true}
  onClose={[Function]}
  open={true}
  title="PrintBoardDialog Title"
>
  <ForwardRef(WithStyles)>
    <FullScreenDialogContent
      className="PrintBoardDialog__container"
    >
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)
            primary={
              <FormattedMessage
                defaultMessage="Print Board"
                id="cboard.components.PrintBoardButton.printBoard"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Print current board or full board set (it can take a while)."
                id="cboard.components.PrintBoardButton.printBoardSecondary"
                values={Object {}}
              />
            }
          />
        </ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)>
            <ForwardRef(WithStyles)
              color="primary"
              disabled={false}
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Current Board"
                id="cboard.components.PrintBoardButton.printCurrentBoard"
                values={Object {}}
              />
            </ForwardRef(WithStyles)>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    </FullScreenDialogContent>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;
